src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> exp
Rule 1     exp -> node_mod
Rule 2     exp -> unsub
Rule 3     exp -> stop_pub
Rule 4     exp -> pub
Rule 5     exp -> sub
Rule 6     exp -> stop_serv
Rule 7     exp -> serv
Rule 8     exp -> stop_clnt
Rule 9     exp -> clnt
Rule 10    exp -> message
Rule 11    sub -> SUBSCRIBE NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type
Rule 12    unsub -> UNSUBSCRIBE NAME FROM TOPIC_SERVICE
Rule 13    pub -> NAME PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type
Rule 14    stop_pub -> NAME STOP_PUBLISHING TO TOPIC_SERVICE
Rule 15    serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE serv_type
Rule 16    stop_serv -> NAME STOP_SERVICE TOPIC_SERVICE
Rule 17    clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params
Rule 18    stop_clnt -> NAME STOP_REQUEST TOPIC_SERVICE
Rule 19    params -> NONE
Rule 20    params -> list
Rule 21    list -> term
Rule 22    list -> list COMMA term
Rule 23    term -> INT
Rule 24    term -> STRING_LITERAL
Rule 25    term -> TRUE
Rule 26    term -> FALSE
Rule 27    node_mod -> CREATE_NODE TOPIC_SERVICE AS NAME
Rule 28    node_mod -> GENERATE_NODE NAME
Rule 29    node_mod -> LOAD NAME AS NAME
Rule 30    message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND INPUT list
Rule 31    serv_type -> ADDTWOINTS
Rule 32    serv_type -> EMPTY
Rule 33    serv_type -> SETBOOL
Rule 34    serv_type -> TRIGGER
Rule 35    serv_type -> WAYPOINTCLEAR
Rule 36    serv_type -> WAYPOINTPULL
Rule 37    serv_type -> WORDCOUNT
Rule 38    sub_type -> STRING
Rule 39    sub_type -> QUATERNION
Rule 40    sub_type -> POINT
Rule 41    sub_type -> POSE2D
Rule 42    sub_type -> VECTOR3
Rule 43    sub_type -> CHAR
Rule 44    sub_type -> INT32
Rule 45    sub_type -> FLOAT32

Terminals, with rules where they appear

ADDTWOINTS           : 31
AND                  : 30
AS                   : 27 29
CHAR                 : 43
CLIENT_REQUESTS      : 17
COMMA                : 22
CREATE_MESSAGE       : 30
CREATE_NODE          : 27
EMPTY                : 32
FALSE                : 26
FLOAT32              : 45
FROM                 : 12
GENERATE_NODE        : 28
INPUT                : 17 30
INT                  : 23
INT32                : 44
LOAD                 : 29
MESSAGE_TYPE         : 11 13 30
NAME                 : 11 12 13 13 14 15 16 17 18 27 28 29 29 30
NONE                 : 19
OF                   : 11 13 15 17 30
POINT                : 40
POSE2D               : 41
PROVIDES_SERVICE     : 15
PUBLISH              : 13
QUATERNION           : 39
SERVICE_TYPE         : 15 17
SETBOOL              : 33
STOP_PUBLISHING      : 14
STOP_REQUEST         : 18
STOP_SERVICE         : 16
STRING               : 38
STRING_LITERAL       : 24
SUBSCRIBE            : 11
TO                   : 11 13 14
TOPIC_SERVICE        : 11 12 13 14 15 16 17 18 27
TRIGGER              : 34
TRUE                 : 25
UNSUBSCRIBE          : 12
VECTOR3              : 42
WAYPOINTCLEAR        : 35
WAYPOINTPULL         : 36
WITH                 : 17
WORDCOUNT            : 37
error                : 

Nonterminals, with rules where they appear

clnt                 : 9
exp                  : 0
list                 : 20 22 30
message              : 10
node_mod             : 1
params               : 17
pub                  : 4
serv                 : 7
serv_type            : 15 17
stop_clnt            : 8
stop_pub             : 3
stop_serv            : 6
sub                  : 5
sub_type             : 11 13 30
term                 : 21 22
unsub                : 2

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . node_mod
    (2) exp -> . unsub
    (3) exp -> . stop_pub
    (4) exp -> . pub
    (5) exp -> . sub
    (6) exp -> . stop_serv
    (7) exp -> . serv
    (8) exp -> . stop_clnt
    (9) exp -> . clnt
    (10) exp -> . message
    (27) node_mod -> . CREATE_NODE TOPIC_SERVICE AS NAME
    (28) node_mod -> . GENERATE_NODE NAME
    (29) node_mod -> . LOAD NAME AS NAME
    (12) unsub -> . UNSUBSCRIBE NAME FROM TOPIC_SERVICE
    (14) stop_pub -> . NAME STOP_PUBLISHING TO TOPIC_SERVICE
    (13) pub -> . NAME PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type
    (11) sub -> . SUBSCRIBE NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type
    (16) stop_serv -> . NAME STOP_SERVICE TOPIC_SERVICE
    (15) serv -> . NAME PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE serv_type
    (18) stop_clnt -> . NAME STOP_REQUEST TOPIC_SERVICE
    (17) clnt -> . NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params
    (30) message -> . CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND INPUT list

    CREATE_NODE     shift and go to state 12
    GENERATE_NODE   shift and go to state 14
    LOAD            shift and go to state 15
    UNSUBSCRIBE     shift and go to state 16
    NAME            shift and go to state 13
    SUBSCRIBE       shift and go to state 17
    CREATE_MESSAGE  shift and go to state 18

    exp                            shift and go to state 1
    node_mod                       shift and go to state 2
    unsub                          shift and go to state 3
    stop_pub                       shift and go to state 4
    pub                            shift and go to state 5
    sub                            shift and go to state 6
    stop_serv                      shift and go to state 7
    serv                           shift and go to state 8
    stop_clnt                      shift and go to state 9
    clnt                           shift and go to state 10
    message                        shift and go to state 11

state 1

    (0) S' -> exp .



state 2

    (1) exp -> node_mod .

    $end            reduce using rule 1 (exp -> node_mod .)


state 3

    (2) exp -> unsub .

    $end            reduce using rule 2 (exp -> unsub .)


state 4

    (3) exp -> stop_pub .

    $end            reduce using rule 3 (exp -> stop_pub .)


state 5

    (4) exp -> pub .

    $end            reduce using rule 4 (exp -> pub .)


state 6

    (5) exp -> sub .

    $end            reduce using rule 5 (exp -> sub .)


state 7

    (6) exp -> stop_serv .

    $end            reduce using rule 6 (exp -> stop_serv .)


state 8

    (7) exp -> serv .

    $end            reduce using rule 7 (exp -> serv .)


state 9

    (8) exp -> stop_clnt .

    $end            reduce using rule 8 (exp -> stop_clnt .)


state 10

    (9) exp -> clnt .

    $end            reduce using rule 9 (exp -> clnt .)


state 11

    (10) exp -> message .

    $end            reduce using rule 10 (exp -> message .)


state 12

    (27) node_mod -> CREATE_NODE . TOPIC_SERVICE AS NAME

    TOPIC_SERVICE   shift and go to state 19


state 13

    (14) stop_pub -> NAME . STOP_PUBLISHING TO TOPIC_SERVICE
    (13) pub -> NAME . PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type
    (16) stop_serv -> NAME . STOP_SERVICE TOPIC_SERVICE
    (15) serv -> NAME . PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE serv_type
    (18) stop_clnt -> NAME . STOP_REQUEST TOPIC_SERVICE
    (17) clnt -> NAME . CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params

    STOP_PUBLISHING shift and go to state 20
    PUBLISH         shift and go to state 21
    STOP_SERVICE    shift and go to state 22
    PROVIDES_SERVICE shift and go to state 23
    STOP_REQUEST    shift and go to state 24
    CLIENT_REQUESTS shift and go to state 25


state 14

    (28) node_mod -> GENERATE_NODE . NAME

    NAME            shift and go to state 26


state 15

    (29) node_mod -> LOAD . NAME AS NAME

    NAME            shift and go to state 27


state 16

    (12) unsub -> UNSUBSCRIBE . NAME FROM TOPIC_SERVICE

    NAME            shift and go to state 28


state 17

    (11) sub -> SUBSCRIBE . NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    NAME            shift and go to state 29


state 18

    (30) message -> CREATE_MESSAGE . NAME OF MESSAGE_TYPE sub_type AND INPUT list

    NAME            shift and go to state 30


state 19

    (27) node_mod -> CREATE_NODE TOPIC_SERVICE . AS NAME

    AS              shift and go to state 31


state 20

    (14) stop_pub -> NAME STOP_PUBLISHING . TO TOPIC_SERVICE

    TO              shift and go to state 32


state 21

    (13) pub -> NAME PUBLISH . NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    NAME            shift and go to state 33


state 22

    (16) stop_serv -> NAME STOP_SERVICE . TOPIC_SERVICE

    TOPIC_SERVICE   shift and go to state 34


state 23

    (15) serv -> NAME PROVIDES_SERVICE . TOPIC_SERVICE OF SERVICE_TYPE serv_type

    TOPIC_SERVICE   shift and go to state 35


state 24

    (18) stop_clnt -> NAME STOP_REQUEST . TOPIC_SERVICE

    TOPIC_SERVICE   shift and go to state 36


state 25

    (17) clnt -> NAME CLIENT_REQUESTS . TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params

    TOPIC_SERVICE   shift and go to state 37


state 26

    (28) node_mod -> GENERATE_NODE NAME .

    $end            reduce using rule 28 (node_mod -> GENERATE_NODE NAME .)


state 27

    (29) node_mod -> LOAD NAME . AS NAME

    AS              shift and go to state 38


state 28

    (12) unsub -> UNSUBSCRIBE NAME . FROM TOPIC_SERVICE

    FROM            shift and go to state 39


state 29

    (11) sub -> SUBSCRIBE NAME . TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    TO              shift and go to state 40


state 30

    (30) message -> CREATE_MESSAGE NAME . OF MESSAGE_TYPE sub_type AND INPUT list

    OF              shift and go to state 41


state 31

    (27) node_mod -> CREATE_NODE TOPIC_SERVICE AS . NAME

    NAME            shift and go to state 42


state 32

    (14) stop_pub -> NAME STOP_PUBLISHING TO . TOPIC_SERVICE

    TOPIC_SERVICE   shift and go to state 43


state 33

    (13) pub -> NAME PUBLISH NAME . TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    TO              shift and go to state 44


state 34

    (16) stop_serv -> NAME STOP_SERVICE TOPIC_SERVICE .

    $end            reduce using rule 16 (stop_serv -> NAME STOP_SERVICE TOPIC_SERVICE .)


state 35

    (15) serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE . OF SERVICE_TYPE serv_type

    OF              shift and go to state 45


state 36

    (18) stop_clnt -> NAME STOP_REQUEST TOPIC_SERVICE .

    $end            reduce using rule 18 (stop_clnt -> NAME STOP_REQUEST TOPIC_SERVICE .)


state 37

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE . OF SERVICE_TYPE serv_type WITH INPUT params

    OF              shift and go to state 46


state 38

    (29) node_mod -> LOAD NAME AS . NAME

    NAME            shift and go to state 47


state 39

    (12) unsub -> UNSUBSCRIBE NAME FROM . TOPIC_SERVICE

    TOPIC_SERVICE   shift and go to state 48


state 40

    (11) sub -> SUBSCRIBE NAME TO . TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    TOPIC_SERVICE   shift and go to state 49


state 41

    (30) message -> CREATE_MESSAGE NAME OF . MESSAGE_TYPE sub_type AND INPUT list

    MESSAGE_TYPE    shift and go to state 50


state 42

    (27) node_mod -> CREATE_NODE TOPIC_SERVICE AS NAME .

    $end            reduce using rule 27 (node_mod -> CREATE_NODE TOPIC_SERVICE AS NAME .)


state 43

    (14) stop_pub -> NAME STOP_PUBLISHING TO TOPIC_SERVICE .

    $end            reduce using rule 14 (stop_pub -> NAME STOP_PUBLISHING TO TOPIC_SERVICE .)


state 44

    (13) pub -> NAME PUBLISH NAME TO . TOPIC_SERVICE OF MESSAGE_TYPE sub_type

    TOPIC_SERVICE   shift and go to state 51


state 45

    (15) serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE OF . SERVICE_TYPE serv_type

    SERVICE_TYPE    shift and go to state 52


state 46

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF . SERVICE_TYPE serv_type WITH INPUT params

    SERVICE_TYPE    shift and go to state 53


state 47

    (29) node_mod -> LOAD NAME AS NAME .

    $end            reduce using rule 29 (node_mod -> LOAD NAME AS NAME .)


state 48

    (12) unsub -> UNSUBSCRIBE NAME FROM TOPIC_SERVICE .

    $end            reduce using rule 12 (unsub -> UNSUBSCRIBE NAME FROM TOPIC_SERVICE .)


state 49

    (11) sub -> SUBSCRIBE NAME TO TOPIC_SERVICE . OF MESSAGE_TYPE sub_type

    OF              shift and go to state 54


state 50

    (30) message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE . sub_type AND INPUT list
    (38) sub_type -> . STRING
    (39) sub_type -> . QUATERNION
    (40) sub_type -> . POINT
    (41) sub_type -> . POSE2D
    (42) sub_type -> . VECTOR3
    (43) sub_type -> . CHAR
    (44) sub_type -> . INT32
    (45) sub_type -> . FLOAT32

    STRING          shift and go to state 56
    QUATERNION      shift and go to state 57
    POINT           shift and go to state 58
    POSE2D          shift and go to state 59
    VECTOR3         shift and go to state 60
    CHAR            shift and go to state 61
    INT32           shift and go to state 62
    FLOAT32         shift and go to state 63

    sub_type                       shift and go to state 55

state 51

    (13) pub -> NAME PUBLISH NAME TO TOPIC_SERVICE . OF MESSAGE_TYPE sub_type

    OF              shift and go to state 64


state 52

    (15) serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE . serv_type
    (31) serv_type -> . ADDTWOINTS
    (32) serv_type -> . EMPTY
    (33) serv_type -> . SETBOOL
    (34) serv_type -> . TRIGGER
    (35) serv_type -> . WAYPOINTCLEAR
    (36) serv_type -> . WAYPOINTPULL
    (37) serv_type -> . WORDCOUNT

    ADDTWOINTS      shift and go to state 66
    EMPTY           shift and go to state 67
    SETBOOL         shift and go to state 68
    TRIGGER         shift and go to state 69
    WAYPOINTCLEAR   shift and go to state 70
    WAYPOINTPULL    shift and go to state 71
    WORDCOUNT       shift and go to state 72

    serv_type                      shift and go to state 65

state 53

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE . serv_type WITH INPUT params
    (31) serv_type -> . ADDTWOINTS
    (32) serv_type -> . EMPTY
    (33) serv_type -> . SETBOOL
    (34) serv_type -> . TRIGGER
    (35) serv_type -> . WAYPOINTCLEAR
    (36) serv_type -> . WAYPOINTPULL
    (37) serv_type -> . WORDCOUNT

    ADDTWOINTS      shift and go to state 66
    EMPTY           shift and go to state 67
    SETBOOL         shift and go to state 68
    TRIGGER         shift and go to state 69
    WAYPOINTCLEAR   shift and go to state 70
    WAYPOINTPULL    shift and go to state 71
    WORDCOUNT       shift and go to state 72

    serv_type                      shift and go to state 73

state 54

    (11) sub -> SUBSCRIBE NAME TO TOPIC_SERVICE OF . MESSAGE_TYPE sub_type

    MESSAGE_TYPE    shift and go to state 74


state 55

    (30) message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type . AND INPUT list

    AND             shift and go to state 75


state 56

    (38) sub_type -> STRING .

    AND             reduce using rule 38 (sub_type -> STRING .)
    $end            reduce using rule 38 (sub_type -> STRING .)


state 57

    (39) sub_type -> QUATERNION .

    AND             reduce using rule 39 (sub_type -> QUATERNION .)
    $end            reduce using rule 39 (sub_type -> QUATERNION .)


state 58

    (40) sub_type -> POINT .

    AND             reduce using rule 40 (sub_type -> POINT .)
    $end            reduce using rule 40 (sub_type -> POINT .)


state 59

    (41) sub_type -> POSE2D .

    AND             reduce using rule 41 (sub_type -> POSE2D .)
    $end            reduce using rule 41 (sub_type -> POSE2D .)


state 60

    (42) sub_type -> VECTOR3 .

    AND             reduce using rule 42 (sub_type -> VECTOR3 .)
    $end            reduce using rule 42 (sub_type -> VECTOR3 .)


state 61

    (43) sub_type -> CHAR .

    AND             reduce using rule 43 (sub_type -> CHAR .)
    $end            reduce using rule 43 (sub_type -> CHAR .)


state 62

    (44) sub_type -> INT32 .

    AND             reduce using rule 44 (sub_type -> INT32 .)
    $end            reduce using rule 44 (sub_type -> INT32 .)


state 63

    (45) sub_type -> FLOAT32 .

    AND             reduce using rule 45 (sub_type -> FLOAT32 .)
    $end            reduce using rule 45 (sub_type -> FLOAT32 .)


state 64

    (13) pub -> NAME PUBLISH NAME TO TOPIC_SERVICE OF . MESSAGE_TYPE sub_type

    MESSAGE_TYPE    shift and go to state 76


state 65

    (15) serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE serv_type .

    $end            reduce using rule 15 (serv -> NAME PROVIDES_SERVICE TOPIC_SERVICE OF SERVICE_TYPE serv_type .)


state 66

    (31) serv_type -> ADDTWOINTS .

    $end            reduce using rule 31 (serv_type -> ADDTWOINTS .)
    WITH            reduce using rule 31 (serv_type -> ADDTWOINTS .)


state 67

    (32) serv_type -> EMPTY .

    $end            reduce using rule 32 (serv_type -> EMPTY .)
    WITH            reduce using rule 32 (serv_type -> EMPTY .)


state 68

    (33) serv_type -> SETBOOL .

    $end            reduce using rule 33 (serv_type -> SETBOOL .)
    WITH            reduce using rule 33 (serv_type -> SETBOOL .)


state 69

    (34) serv_type -> TRIGGER .

    $end            reduce using rule 34 (serv_type -> TRIGGER .)
    WITH            reduce using rule 34 (serv_type -> TRIGGER .)


state 70

    (35) serv_type -> WAYPOINTCLEAR .

    $end            reduce using rule 35 (serv_type -> WAYPOINTCLEAR .)
    WITH            reduce using rule 35 (serv_type -> WAYPOINTCLEAR .)


state 71

    (36) serv_type -> WAYPOINTPULL .

    $end            reduce using rule 36 (serv_type -> WAYPOINTPULL .)
    WITH            reduce using rule 36 (serv_type -> WAYPOINTPULL .)


state 72

    (37) serv_type -> WORDCOUNT .

    $end            reduce using rule 37 (serv_type -> WORDCOUNT .)
    WITH            reduce using rule 37 (serv_type -> WORDCOUNT .)


state 73

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type . WITH INPUT params

    WITH            shift and go to state 77


state 74

    (11) sub -> SUBSCRIBE NAME TO TOPIC_SERVICE OF MESSAGE_TYPE . sub_type
    (38) sub_type -> . STRING
    (39) sub_type -> . QUATERNION
    (40) sub_type -> . POINT
    (41) sub_type -> . POSE2D
    (42) sub_type -> . VECTOR3
    (43) sub_type -> . CHAR
    (44) sub_type -> . INT32
    (45) sub_type -> . FLOAT32

    STRING          shift and go to state 56
    QUATERNION      shift and go to state 57
    POINT           shift and go to state 58
    POSE2D          shift and go to state 59
    VECTOR3         shift and go to state 60
    CHAR            shift and go to state 61
    INT32           shift and go to state 62
    FLOAT32         shift and go to state 63

    sub_type                       shift and go to state 78

state 75

    (30) message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND . INPUT list

    INPUT           shift and go to state 79


state 76

    (13) pub -> NAME PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE . sub_type
    (38) sub_type -> . STRING
    (39) sub_type -> . QUATERNION
    (40) sub_type -> . POINT
    (41) sub_type -> . POSE2D
    (42) sub_type -> . VECTOR3
    (43) sub_type -> . CHAR
    (44) sub_type -> . INT32
    (45) sub_type -> . FLOAT32

    STRING          shift and go to state 56
    QUATERNION      shift and go to state 57
    POINT           shift and go to state 58
    POSE2D          shift and go to state 59
    VECTOR3         shift and go to state 60
    CHAR            shift and go to state 61
    INT32           shift and go to state 62
    FLOAT32         shift and go to state 63

    sub_type                       shift and go to state 80

state 77

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH . INPUT params

    INPUT           shift and go to state 81


state 78

    (11) sub -> SUBSCRIBE NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type .

    $end            reduce using rule 11 (sub -> SUBSCRIBE NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type .)


state 79

    (30) message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND INPUT . list
    (21) list -> . term
    (22) list -> . list COMMA term
    (23) term -> . INT
    (24) term -> . STRING_LITERAL
    (25) term -> . TRUE
    (26) term -> . FALSE

    INT             shift and go to state 84
    STRING_LITERAL  shift and go to state 85
    TRUE            shift and go to state 86
    FALSE           shift and go to state 87

    list                           shift and go to state 82
    term                           shift and go to state 83

state 80

    (13) pub -> NAME PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type .

    $end            reduce using rule 13 (pub -> NAME PUBLISH NAME TO TOPIC_SERVICE OF MESSAGE_TYPE sub_type .)


state 81

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT . params
    (19) params -> . NONE
    (20) params -> . list
    (21) list -> . term
    (22) list -> . list COMMA term
    (23) term -> . INT
    (24) term -> . STRING_LITERAL
    (25) term -> . TRUE
    (26) term -> . FALSE

    NONE            shift and go to state 89
    INT             shift and go to state 84
    STRING_LITERAL  shift and go to state 85
    TRUE            shift and go to state 86
    FALSE           shift and go to state 87

    params                         shift and go to state 88
    list                           shift and go to state 90
    term                           shift and go to state 83

state 82

    (30) message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND INPUT list .
    (22) list -> list . COMMA term

    $end            reduce using rule 30 (message -> CREATE_MESSAGE NAME OF MESSAGE_TYPE sub_type AND INPUT list .)
    COMMA           shift and go to state 91


state 83

    (21) list -> term .

    COMMA           reduce using rule 21 (list -> term .)
    $end            reduce using rule 21 (list -> term .)


state 84

    (23) term -> INT .

    COMMA           reduce using rule 23 (term -> INT .)
    $end            reduce using rule 23 (term -> INT .)


state 85

    (24) term -> STRING_LITERAL .

    COMMA           reduce using rule 24 (term -> STRING_LITERAL .)
    $end            reduce using rule 24 (term -> STRING_LITERAL .)


state 86

    (25) term -> TRUE .

    COMMA           reduce using rule 25 (term -> TRUE .)
    $end            reduce using rule 25 (term -> TRUE .)


state 87

    (26) term -> FALSE .

    COMMA           reduce using rule 26 (term -> FALSE .)
    $end            reduce using rule 26 (term -> FALSE .)


state 88

    (17) clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params .

    $end            reduce using rule 17 (clnt -> NAME CLIENT_REQUESTS TOPIC_SERVICE OF SERVICE_TYPE serv_type WITH INPUT params .)


state 89

    (19) params -> NONE .

    $end            reduce using rule 19 (params -> NONE .)


state 90

    (20) params -> list .
    (22) list -> list . COMMA term

    $end            reduce using rule 20 (params -> list .)
    COMMA           shift and go to state 91


state 91

    (22) list -> list COMMA . term
    (23) term -> . INT
    (24) term -> . STRING_LITERAL
    (25) term -> . TRUE
    (26) term -> . FALSE

    INT             shift and go to state 84
    STRING_LITERAL  shift and go to state 85
    TRUE            shift and go to state 86
    FALSE           shift and go to state 87

    term                           shift and go to state 92

state 92

    (22) list -> list COMMA term .

    COMMA           reduce using rule 22 (list -> list COMMA term .)
    $end            reduce using rule 22 (list -> list COMMA term .)

